--- a/style.css
+++ b/style.css
@@ -19,12 +19,19 @@ html {
 .bg-color {
   background-color: #7edcff;
   height: 100%;
-
   /* Center and scale the image nicely */
   background-position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+/* .bg-colortwo {
+  background-color: #C9A281;
+
+  /* Center and scale the image nicely */
+
+/* }  */
+
 
 /* .bg-image {
   /* The image used */
@@ -59,15 +66,57 @@ header {
     width: 100vw; */
     background:rgb(136, 29, 29);
     overflow: hidden;
+    /* background-color: rgb(136, 29, 29); */
+}
+
+.cardOne {
+  /* height: 600px;
+  width: 100vw; */
+  background:rgb(18, 71, 17);
+  overflow: hidden;
+
+}
+
+.cardTwo {
+  /* height: 600px;
+  width: 100vw; */
+  background:rgb(182, 153, 26);
+  overflow: hidden;
+}
+
+.cardThree {
+  /* height: 600px;
+  width: 100vw; */
+  background:rgb(125, 26, 182);
+  overflow: hidden;
+}
+.cardFour {
+  /* height: 600px;
+  width: 100vw; */
+  background:rgb(136, 29, 29);
+  overflow: hidden;
+}
+
+.headerimg {
+  /* height: 100%;
+  width: 100%; */
+  /* opacity: 0.5; */
+  /* background-position: relative; */
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.navcolor{
+  color:rgb(136, 29, 29);
 }
 
 img {
-    height: 80%;
-    width: 100%;
-   opacity: 0.2;
-   background-position: relative;
-   background-repeat: no-repeat;
-   background-size: cover;
+  height: 100%;
+  width: 100%;
+  opacity: 0.7;
+  background-position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Let's Drink Info */
@@ -77,7 +126,7 @@ img {
   color: rgb(255, 196, 0);
   font-weight: bold;
   position: absolute;
-  top: 60%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -95,7 +144,7 @@ img {
   color: rgb(255, 196, 0);
   font-weight: bold;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -106,12 +155,77 @@ img {
   font-family: 'Lily Script One', cursive;
 }
 
+.textoverlayone{
+  position: absolute;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  color: rgb(250, 174, 34);
+}
+
+.textoverlaytwo{
+  position: absolute;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  color: rgb(136, 29, 29);
+}
+
+.textoverlaythree{
+  position: absolute;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  color: rgb(6, 31, 16);
+}
+
+.textoverlayfour{
+  position: absolute;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  color: rgb(40, 9, 58);
+}
+
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin-bottom: 50px;
   color: gray;
+}
+
+.col-3{
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 
@@ -151,13 +265,13 @@ img {
 
 
 .intro{
-  font-size: 40px;
+  font-size: 60px;
   color: #0B3c5d;
   text-align: center;
   font-style: italic bold;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lily Script One', cursive;
   margin-top: 40px;
-  margin-bottom: 30px;
+
 }
 
 .logo{
