--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@ html {
 header {
     /* height: 600px;
     width: 100vw; */
-    background:rgb(136, 29, 29);
+    /* background:rgb(136, 29, 29); */
     overflow: hidden;
-    /* background-color: rgb(136, 29, 29); */
+    background-color: rgb(136, 29, 29);
 }
 
 .cardOne {
@@ -100,7 +100,7 @@ header {
 .headerimg {
   /* height: 100%;
   width: 100%; */
-  /* opacity: 0.5; */
+  opacity: 0.3;
   /* background-position: relative; */
   background-repeat: no-repeat;
   background-size: cover;
@@ -248,6 +248,22 @@ img {
 
 .container {
   padding: 2px 16px;
+}
+
+.header-background{
+  background-color: #7e99b4;
+  padding: 60px;
+  text-align: center;
+}
+
+.header-font{
+  font-size: 50px;
+  color: rgb(250, 174, 34);
+}
+
+.header-info{
+  font-size: 20px;
+  color: rgb(136, 29, 29);
 }
 
 .iconStyle {
